# football-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  Containerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
.claude/: CLAUDE.md
config/: ingestion.yaml
config/sql/: init.sql  postgres-init.sh
dags/: dag_build_features.py  dag_entity_resolution.py  dag_export_enriched.py  dag_ingest_api_football.py  dag_ingest_fbref.py  dag_ingest_statsbomb.py  dag_ingest_understat.py  dag_transform_clean.py
data/raw/understat/: player_season.parquet  shots.parquet
datasette/: metadata.yml
datasette/static/: custom.css
docs/: architecture.md  entity-resolution-spec.md
docs/adr/: 001-podman-over-docker.md  002-data-source-selection.md  003-event-data-out-of-scope.md
sql/: init.sql
src/pipeline/: __init__.py  config.py  db.py  entity_resolution.py  export_enriched.py  feature_engineering.py  observability.py  transform_clean.py
src/pipeline/loaders/: __init__.py  api_football_loader.py  understat_loader.py
src/pipeline/models/: __init__.py  clean.py  features.py  raw.py
tests/: conftest.py  test_api_football_loader.py  test_config.py  test_entity_resolution.py  test_export_enriched.py  test_feature_engineering.py  test_models_raw.py  test_transform_clean.py  test_understat_loader.py
tests/fixtures/: api_football_injuries_response.json  api_football_injury.json  api_football_player.json  api_football_players_response.json  api_football_teams_response.json  api_football_transfer.json  api_football_transfers_response.json  understat_player_season.json  understat_season_dataframe.json  understat_shots_dataframe.json
